--- a/config.org
+++ b/config.org
@@ -461,6 +461,8 @@
   :config
   (evil-mode 1)
   (define-key evil-insert-state-map (kbd "TAB") 'tab-to-tab-stop)
+  (setcdr evil-insert-state-map nil)
+  (define-key evil-insert-state-map [escape] 'evil-normal-state)
   (setq-default evil-shift-width 2)
   (setq evil-search-module 'evil-search)
   ;;    (evil-set-initial-state 'occur-mode 'normal)
