Add function to insert uuids at point

--- a/config.org
+++ b/config.org
@@ -270,6 +270,31 @@
   (enlarge-window 15)
   (evil-window-down 1)
   )
+  
+(defun insert-uuid ()
+  (interactive)
+  (let ((rnd (md5 (format "%s%s%s%s%s%s%s"
+                          (random)
+                          (current-time)
+                          (user-uid)
+                          (emacs-pid)
+                          (user-full-name)
+                          user-mail-address
+                          (recent-keys)))))
+    (format "%s-%s-4%s-%s%s-%s"
+            (substring rnd 0 8)
+            (substring rnd 8 12)
+            (substring rnd 13 16)
+            (format "%x"
+                    (logior
+                     #b10000000
+                     (logand
+                      #b10111111
+                      (string-to-number
+                       (substring rnd 16 18) 16))))
+            (substring rnd 18 20)
+            (substring rnd 20 32))
+    (insert rnd)))
 ;; (defun popup-shell ()
 ;;   (interactive)
 ;;   (ansi-term "/usr/bin/zsh" "terminal")
