--- a/config.org
+++ b/config.org
@@ -621,6 +621,9 @@ Making org mode work how I like it:
     (defun asb-ess-R-object-popup-interactive (r-func)
       (interactive "sR function to execute: ")
       (asb-ess-R-object-popup r-func))
+
+    (add-hook 'ess-mode-hook 'company-mode)
+    (add-hook 'ess-mode-hook 'linum-relative-mode)
     )
   (use-package popup :ensure t)
 #+end_src
