--- a/config.org
+++ b/config.org
@@ -194,10 +194,16 @@
    ;; (load-theme 'subatomic t)
    ;; (moe-light)
 
- (use-package spacemacs-theme
-   :ensure t
-   :defer t
-   :init (load-theme 'spacemacs-light t))
+; (use-package spacemacs-theme
+;   :ensure t
+;   :defer t
+;   :init (load-theme 'spacemacs-light t))
+
+(use-package atom-one-dark-theme
+  :ensure t
+  :config
+  (load-theme 'atom-one-dark))
+
 
   ;;  (use-package doom-themes
   ;;   :ensure t
@@ -1355,6 +1361,6 @@ Most likely: OmniSharp for Linux, .Net Core Debugger, -> msbuild-stable (<--!!!)
         (setq my-prev-whitespace-mode nil))))
 (advice-add 'company-pseudo-tooltip-unhide :before #'pre-popup-draw)
 (advice-add 'company-pseudo-tooltip-hide :after #'post-popup-draw)
-(set-cursor-color "#7B1FA2")
+;(set-cursor-color "#7B1FA2")
 #+END_SRC
 
