--- a/config.org
+++ b/config.org
@@ -708,7 +708,7 @@ Making org mode work how I like it:
 
 ** Counsel
 #+begin_src emacs-lisp
-(use-package counsel :ensure t
+(use-package counsel
   :defer t
   :config
   ;;  (setq counsel-find-file-at-point t)
@@ -723,11 +723,28 @@ Making org mode work how I like it:
   :defer t
   :config
   (setq projectile-mode-line " foo")
-  (setq projectile-completion-system 'ivy)
+  (setq projectile-completion-system 'helm)
   (setq projectile-file-exists-local-cache-expire (* 5 60))
   (projectile-global-mode t))
 #+end_src
 
+** Helm
+#+BEGIN_SRC emacs-lisp
+(use-package helm :ensure t
+:config
+(setq helm-buffers-fuzzy-matching t
+      helm-recentf-fuzzy-match    t
+      helm-candidate-number-limit 50
+      helm-ff-skip-boring-files t
+      helm-linum-relative-mode t))
+
+(use-package helm-swoop :ensure t
+:config (setq helm-swoop-pre-input-function (lambda () ""))
+(setq helm-swoop-speed-or-color t)
+)
+(use-package helm-projectile :ensure t)
+(use-package helm-ls-git :ensure t)
+#+END_SRC
 ** Linum Relative
 #+begin_src emacs-lisp
   (use-package linum-relative :ensure t
