Add omnisharp go to definiton to jump list

--- a/config.org
+++ b/config.org
@@ -1351,6 +1351,7 @@ Most likely: OmniSharp for Linux, .Net Core Debugger, -> msbuild-stable (<--!!!)
   (define-key global-map [(S-return)] 'add-semicolon)
 
 (evil-add-command-properties #'tide-jump-to-definition :jump t)
+(evil-add-command-properties #'omnisharp-go-to-definition :jump t)
 ;;(evil-add-command-properties #'evil-previous-line :jump t)
 ;;(evil-add-command-properties #'evil-next-line :jump t)
 #+END_SRC
