--- a/config.org
+++ b/config.org
@@ -571,6 +571,7 @@
   (evil-mode 1)
   (define-key evil-insert-state-map (kbd "TAB") 'tab-to-tab-stop)
   (setcdr evil-insert-state-map nil)
+  (define-key evil-insert-state-map (kbd "M-x") 'helm-M-x)
   (define-key evil-insert-state-map [escape] 'evil-normal-state)
   (setq-default evil-shift-width 2)
   (setq evil-search-module 'evil-search)
