--- a/config.org
+++ b/config.org
@@ -1432,6 +1432,7 @@ Most likely: OmniSharp for Linux, .Net Core Debugger, -> msbuild-stable (<--!!!)
                 (evil-define-key 'normal omnisharp-mode-map (kbd "g d") 'omnisharp-go-to-definition)
                 ))
     (add-hook 'csharp-mode-hook 'omnisharp-mode)
+    (add-hook 'csharp-mode-hook 'flycheck-mode)
 
     (add-hook 'csharp-mode-hook (lambda () (whitespace-mode -1)))
     (add-to-list 'company-backends 'company-omnisharp))
