--- a/config.org
+++ b/config.org
@@ -1191,10 +1191,11 @@ Maps numbers to windows on screen, allows switching windows by window number
 
     ;; (add-hook 'neotree-mode-hook
     ;;           (lambda ()
-                (evil-define-key 'normal neotree-mode-map (kbd "TAB") 'neotree-enter)
+                (evil-define-key 'normal neotree-mode-map (kbd "TAB") 'neotree-quick-look)
                 (evil-define-key 'normal neotree-mode-map (kbd "SPC") nil)
                 (evil-define-key 'normal neotree-mode-map (kbd "q") 'neotree-hide)
                 (evil-define-key 'normal neotree-mode-map (kbd "RET") 'neotree-enter)
+                (evil-define-key 'normal neotree-mode-map (kbd "+") 'neotree-create-node)
                 (evil-define-key 'normal neotree-mode-map (kbd "g") 'neotree-refresh)
                 (evil-define-key 'normal neotree-mode-map (kbd "n") 'neotree-next-line)
                 (evil-define-key 'normal neotree-mode-map (kbd "p") 'neotree-previous-line)
