--- a/config.org
+++ b/config.org
@@ -189,17 +189,20 @@
 #+END_SRC
 ** Theme
 #+begin_src emacs-lisp
-  (use-package base16-theme :ensure t)
-  (setq dark-theme t)
+    (use-package base16-theme :ensure t)
+  ;;  (use-package gruvbox-theme :ensure t)
+    (setq dark-theme nil)
 
-  (if dark-theme
-      (load-theme 'base16-materia)
-    (load-theme 'base16-material-lighter))
+    (if dark-theme
+        ;; (load-theme 'base16-materia)
+        (load-theme 'gruvbox-dark-soft)
+      (load-theme 'gruvbox-light-medium))
+      ;; (load-theme 'base16-material-lighter))
 
 
-  ;;(load-theme 'base16-material-lighter)
-  ;;(load-theme 'base16-one-light)
-  ;; (load-theme 'base16-harmonic-light)
+    ;;(load-theme 'base16-material-lighter)
+    ;;(load-theme 'base16-one-light)
+    ;; (load-theme 'base16-harmonic-light)
 #+end_src
 
 
