--- a/config.org
+++ b/config.org
@@ -1166,11 +1166,12 @@ Maps numbers to windows on screen, allows switching windows by window number
   ;(use-package olivetti
   ;  :ensure t)
   (use-package writeroom-mode
-    :ensure t)
+    :ensure t
+   (setq writeroom-fullscreen-effect 'maximized))
   (defun writemode ()
     (interactive)
     (writeroom-mode)
-    (load-theme 'poet))
+    )
 #+END_SRC
 ** Dired sidebar
 #+BEGIN_SRC emacs-lisp
