--- a/config.org
+++ b/config.org
@@ -72,19 +72,18 @@
 
 ** General
 #+begin_src emacs-lisp
-  (menu-bar-mode 0)
-  (tool-bar-mode 0)
   ;; (set-face-attribute 'default nil :height 120)
   ;; (set-default-font "Noto Sans 12")
   ;; (set-default-font "Fira Mono 12")
-  (add-to-list 'default-frame-alist '(font . "Hack 12"))
+;; DejaVuSansMono FTW!!!
+  (add-to-list 'default-frame-alist '(font . "DejaVuSansMono 11"))
+;;  (add-to-list 'default-frame-alist '(font . "Hack 12"))
 ;;  (add-to-list 'default-frame-alist '(font . "Fira Mono 12"))
   ;; (add-to-list 'default-frame-alist '(font . "Input Mono Light"))
   ;; (set-default-font "Fira Code 12")
   ;; (set-default-font "Hack 12")
   ;; (set-default-font "Inconsolata 14")
   ;; (set-default-font "Droid Sans Mono for Powerline Plus Nerd File Types Mono 13")
-  (toggle-scroll-bar -1)
   ;;  (set-fringe-mode 0) ;; deactivates gutters at screen edges on linebreak
   (setq whitespace-line-column 999)
   (set-face-bold-p 'bold nil)
