--- a/config.org
+++ b/config.org
@@ -792,6 +792,138 @@ Add org-bullets for nice icons instead of stars
 :config (eshell-git-prompt-use-theme 'powerline)
 )
 #+END_SRC
+** Ediff
+#+BEGIN_SRC emacs-lisp
+  (require 'ediff nil t)
+
+  (defconst evil-collection-ediff-maps '(ediff-mode-map))
+
+  (defvar evil-collection-ediff-initial-state-backup (evil-initial-state 'ediff-mode))
+  (defvar evil-collection-ediff-long-help-message-compare2-backup ediff-long-help-message-compare2)
+  (defvar evil-collection-ediff-long-help-message-compare3-backup  ediff-long-help-message-compare3)
+  (defvar evil-collection-ediff-long-help-message-narrow2-backup  ediff-long-help-message-narrow2)
+  (defvar evil-collection-ediff-long-help-message-word-backup  ediff-long-help-message-word-mode)
+  (defvar evil-collection-ediff-long-help-message-merge-backup  ediff-long-help-message-merge)
+  (defvar evil-collection-ediff-long-help-message-head-backup  ediff-long-help-message-head)
+  (defvar evil-collection-ediff-long-help-message-tail-backup  ediff-long-help-message-tail)
+
+  (defvar evil-collection-ediff-help-changed nil)
+
+  (defun evil-collection-ediff-adjust-help ()
+    "Adjust long help messages to reflect evil-ediff bindings."
+    (unless evil-collection-ediff-help-changed
+      (dolist (msg '(ediff-long-help-message-compare2
+                     ediff-long-help-message-compare3
+                     ediff-long-help-message-narrow2
+                     ediff-long-help-message-word-mode
+                     ediff-long-help-message-merge
+                     ediff-long-help-message-head
+                     ediff-long-help-message-tail))
+        (dolist (chng '( ;;("^" . "  ")
+                        ("p,DEL -previous diff " . "k,N,p -previous diff ")
+                        ("n,SPC -next diff     " . "  j,n -next diff     ")
+                        ("    j -jump to diff  " . "    d -jump to diff  ")
+                        ("    h -highlighting  " . "    H -highlighting  ")
+                        ("  v/V -scroll up/dn  " . "C-u/d -scroll up/dn  ")
+                        ("  </> -scroll lt/rt  " . "zh/zl -scroll lt/rt  ")
+                        ("  z/q -suspend/quit"   . "C-z/q -suspend/quit")))
+          (setf (symbol-value msg)
+                (replace-regexp-in-string (car chng) (cdr chng) (symbol-value msg))))))
+    (setq evil-collection-ediff-help-changed t))
+
+  (defun evil-collection-ediff-scroll-left (&optional arg)
+    "Scroll left."
+    (interactive "P")
+    (let ((last-command-event ?>))
+      (ediff-scroll-horizontally arg)))
+
+  (defun evil-collection-ediff-scroll-right (&optional arg)
+    "Scroll right."
+    (interactive "P")
+    (let ((last-command-event ?<))
+      (ediff-scroll-horizontally arg)))
+
+  (defun evil-collection-ediff-scroll-up (&optional arg)
+    "Scroll up by half of a page."
+    (interactive "P")
+    (let ((last-command-event ?V))
+      (ediff-scroll-vertically arg)))
+
+  (defun evil-collection-ediff-scroll-down (&optional arg)
+    "Scroll down by half of a page."
+    (interactive "P")
+    (let ((last-command-event ?v))
+      (ediff-scroll-vertically arg)))
+
+  (defun evil-collection-ediff-scroll-down-1 ()
+    "Scroll down by a line."
+    (interactive)
+    (let ((last-command-event ?v))
+      (ediff-scroll-vertically 1)))
+
+  (defun evil-collection-ediff-scroll-up-1 ()
+    "Scroll down by a line."
+    (interactive)
+    (let ((last-command-event ?V))
+      (ediff-scroll-vertically 1)))
+
+  (defun evil-collection-ediff-first-difference ()
+    "Jump to first difference."
+    (interactive)
+    (ediff-jump-to-difference 1))
+
+  (defun evil-collection-ediff-last-difference ()
+    "Jump to last difference."
+    (interactive)
+    (ediff-jump-to-difference ediff-number-of-differences))
+
+  ;; (defun evil-collection-ediff-restore-diff ()
+  ;;   "Restore the copy of current region."
+  ;;   (interactive)
+  ;;   (ediff-restore-diff nil ?a)
+  ;;   (ediff-restore-diff nil ?b))
+
+  (defvar evil-collection-ediff-bindings
+    '(("d"    . ediff-jump-to-difference)
+      ("H"    . ediff-toggle-hilit)
+      ("\C-e" . evil-collection-ediff-scroll-down-1)
+      ("\C-y" . evil-collection-ediff-scroll-up-1)
+      ("j"    . ediff-next-difference)
+      ("k"    . ediff-previous-difference)
+      ("N"    . ediff-previous-difference)
+      ("gg"   . evil-collection-ediff-first-difference)
+      ("G"    . evil-collection-ediff-last-difference)
+      ("\C-d" . evil-collection-ediff-scroll-down)
+      ("\C-u" . evil-collection-ediff-scroll-up)
+      ("\C-z" . ediff-suspend)
+      ("z"    . nil)
+      ("zl"   . evil-collection-ediff-scroll-right)
+      ("zh"   . evil-collection-ediff-scroll-left)
+      ;; Not working yet
+      ;; ("u"    . evil-collection-ediff-restore-diff)
+      )
+    "A list of bindings changed/added in evil-ediff.")
+
+  (defun evil-collection-ediff-startup-hook ()
+    "Place evil-ediff bindings in `ediff-mode-map'."
+    (evil-set-initial-state 'ediff-mode 'normal)
+    (evil-make-overriding-map ediff-mode-map 'normal)
+    (dolist (entry evil-collection-ediff-bindings)
+      (define-key ediff-mode-map (car entry) (cdr entry)))
+    (unless (or ediff-3way-comparison-job
+                (eq ediff-split-window-function 'split-window-vertically))
+      (define-key ediff-mode-map "l" 'ediff-copy-A-to-B)
+      (define-key ediff-mode-map "h" 'ediff-copy-B-to-A))
+    (evil-normalize-keymaps)
+    nil)
+
+  (defun evil-collection-ediff-setup ()
+    "Initialize evil-ediff."
+    (add-hook 'ediff-startup-hook 'evil-collection-ediff-startup-hook)
+    (evil-collection-ediff-adjust-help))
+
+  (evil-collection-ediff-setup)
+#+END_SRC
 ** Avy
 #+begin_src emacs-lisp
 (use-package avy :ensure t
