--- a/config.org
+++ b/config.org
@@ -990,6 +990,12 @@ Add org-bullets for nice icons instead of stars
   ;;   (linum-relative-toggle)
 #+end_src
 
+** Lispyville
+#+BEGIN_SRC emacs-lisp
+(use-package lispyville :ensure t
+:config (add-hook 'emacs-lisp-mode-hook #'lispyville-mode)
+(add-hook 'lisp-mode-hook #'lispyville-mode))
+#+END_SRC
 ** Dashboard
 #+begin_src emacs-lisp
 (use-package dashboard :ensure t
